# world-cup-post-match-report

./: .gitignore  pyproject.toml  requirements.txt
env/: pyvenv.cfg
notebook/: parse_pdf.ipynb
python/: PdfParser.py  line_break_table.py  pass_network_table.py  pressure.py
