[tool.poetry]
name = "gshirato/world-cup-post-match-report"
version = "0.0.0"  # using poetry-dynamic-versioning
description = "sample tool"
authors = ["gshirato <gshirato@uni-bonn.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gshirato/world-cup-post-match-report"
repository = "https://github.com/gshirato/world-cup-post-match-report"
documentation = ""

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.0"
matplotlib = "*"

[tool.poetry.scripts]
my-script = 'gshirato/world-cup-post-match-report:main'

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"